# mimic-explorer

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  manage.py  paper.md  pyproject.toml  references.bib  requirements-dev.txt
.github/workflows/: test.yml
clinical/: models.py  serializers.py  urls.py  views.py
core/: apps.py  duckdb_manager.py  duckdb_queries.py  duckdb_schema.py  importer.py  models.py  serializers.py  urls.py  views.py
core/management/commands/: import_mimic.py
core/migrations/: 0001_initial.py
dashboards/: models.py  serializers.py  urls.py  views.py
docs/: API.md
fhir/: apps.py  models.py  serializers.py  transformers.py  urls.py  views.py
fhir-client/: index.html
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/common/: Badge.tsx  Button.tsx  Card.tsx  DataTable.tsx  ProgressBar.tsx  Tabs.tsx  (+2 more)
frontend/src/pages/: CohortBuilder.tsx  CohortDetail.tsx  Dashboard.tsx  Documentation.tsx  EncounterBrowser.tsx  ExportManager.tsx  FHIRExplorer.tsx  PatientChart.tsx  PatientSearch.tsx  PlotBuilder.tsx  Search.tsx  SetupWizard.tsx
mimic_explorer/: __main__.py  asgi.py  cli.py  settings.py  urls.py  wsgi.py
patients/: models.py  urls.py  views.py
research/: engine.py  models.py  serializers.py  urls.py  views.py
research/migrations/: 0001_initial.py  0002_remove_cohortmember_fks.py
static/frontend/: index.html
static/frontend/assets/: index.css  index.js
templates/: index.html
tests/: duckdb_test_utils.py  runner.py  test_api.py  test_fhir.py  test_import.py  test_models.py
(+23 files in other folders)
